Add Pie chart in MBA

--- a/app/templates/cashier/cashier_side.html
+++ b/app/templates/cashier/cashier_side.html
@@ -86,12 +86,10 @@
           </div>
         </section>
 
-        <section id="history" class="section-content hidden">
+        <section id="history" class="section-content">
           <h1 class="text-2xl font-bold mb-4 dark:text-gray-200">History</h1>
-          <div id="history-content" class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow-md">
-            <p class="text-gray-600 mb-6 dark:text-gray-400">
-              Loading transactions...
-            </p>
+          <div id="history-content" class="max-h-[calc(100vh-200px)] overflow-y-auto">
+            
           </div>
         </section>
 
