--- a/app/templates/manager/layout.html
+++ b/app/templates/manager/layout.html
@@ -104,6 +104,7 @@
       window.MBA_URL = "{% url 'mba_recommendations' %}";
     </script>
     <!-- Link to external script.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="{% static 'src/manager_static/script.js' %}" defer></script>
     <script src="{% static 'src/cashier_static/script.js' %}" defer></script>
       <!-- Main Section -->
