Fix validate button

--- a/app/templates/cashier/cashier_side.html
+++ b/app/templates/cashier/cashier_side.html
@@ -86,7 +86,7 @@
           </div>
         </section>
 
-        <section id="history" class="section-content">
+        <section id="history" class="section-content hidden">
           <h1 class="text-2xl font-bold mb-4 dark:text-gray-200">History</h1>
           <div id="history-content" class="max-h-[calc(100vh-200px)] overflow-y-auto">
             
